--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 <html>
+    <link rel="stylesheet" href="style.css">
     <head>
-
+   
     </head>
 
     <body>
-     <p>IIS Luigi Galvani - Milano</p>
+        <p>IIS Luigi Galvani - Milano</p>
     </body>
 </html>
