--- a/templates/index8.html
+++ b/templates/index8.html
@@ -8,6 +8,7 @@
         <p>{{Ora}}</p>
         <p class = "testo"><a href = "/mappa" >IIS Luigi Galvani - Milano</a></p>
         <img src="{{url_for('static', filename='images/galvani.jpg')}}" align="middle" />
-        <img src="{{url_for('static', filename='images/Immagine 2023-03-14 111516.png')}}" align="middle" />
+        <img src="{{url_for('static', filename='images/Immagine 2023-03-14 111516.png')}}" align="middle" , width = {{dimensione}} />
+
     </body>
 </html>
